
[tool.poetry]
name = "anheituan"
version = "0.1.0"
description = "Static site for tea group buy offerings"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pelican = "<5"
Markdown = "^3.8.2"
typogrify = "^2.1.0"
pymdown-extensions = "^10.16"

[tool.poetry.dev-dependencies]
ghp-import = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
